--- a/flagopolis/deno.json
+++ b/flagopolis/deno.json
@@ -1,6 +1,7 @@
 {
   "tasks": {
-    "start": "deno run -A --watch=static/,routes/ dev.ts"
+    "start": "deno run -A --config deno.json --lock lock.json --watch=static/,routes/ dev.ts",
+    "lock": "deno cache --config deno.json --lock lock.json --lock-write dev.ts main.ts"
   },
   "importMap": "./import_map.json",
   "compilerOptions": {
