--- a/deno.json
+++ b/deno.json
@@ -7,6 +7,8 @@
   "tasks": {
     "start": "deno run --unstable -A --config flagopolis/deno.json --watch=flagopolis/static/,flagopolis/routes/ flagopolis/dev.ts",
     "cache": "deno cache --unstable --config deno.json flagopolis/dev.ts flagopolis/main.ts",
+    "deployctl": "deno run --allow-read --allow-write --allow-env --allow-net --allow-run --quiet --no-check --reload=https://deno.land/x/deploy/deployctl.ts https://deno.land/x/deploy/deployctl.ts",
+    "deploy": "deno task deployctl deploy --import-map import_map.json flagopolis/main.ts --project=flagopolis-dev --no-static",
     "sqlite-recreate-database": "(rm flagopolis/db/sqlite/db.sqlite3 || 1) && sqlite3 flagopolis/db/sqlite/db.sqlite3 '.read flagopolis/db/sqlite/schema.sql'"
   },
   "fmt": {
