--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -4,9 +4,8 @@ tasks:
   - before: |
       source scripts/setup.sh
     init: |
-      deno cache --config flagopolis/deno.json --lock flagopolis/lock.json flagopolis/dev.ts flagopolis/main.ts
+      deno cache --config flagopolis/deno.json flagopolis/dev.ts flagopolis/main.ts
     command: |
-      cd flagopolis
       deno task start
 
 ports:
